Send SMS function
Added function to send SMS and show Direction page after sending.
Direction page has no functionality yet, but should be called on
receiving SMS message.
Not tested yet

--- a/GetMeHome/app/src/main/res/layout/content_main.xml
+++ b/GetMeHome/app/src/main/res/layout/content_main.xml
@@ -71,7 +71,7 @@
         android:ems="10"
         android:layout_alignBottom="@+id/state1"
         android:layout_toEndOf="@+id/state1"
-        android:id="@+id/zip"
+        android:id="@+id/zip1"
         tools:inputType="number"
         android:background="@android:drawable/zoom_plate" />
 
