--- a/GetMeHome/app/src/main/res/layout/activity_direction.xml
+++ b/GetMeHome/app/src/main/res/layout/activity_direction.xml
@@ -16,4 +16,12 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:id="@+id/textView" />
+
+    <TextView
+        android:id="@+id/test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="TextView" />
 </RelativeLayout>
