--- a/GetMeHome/app/src/main/res/layout/activity_direction.xml
+++ b/GetMeHome/app/src/main/res/layout/activity_direction.xml
@@ -59,6 +59,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="Resend" />
+        android:text="Recalculate" />
 
 </RelativeLayout>
